p2/confs/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      volumes:
        - name: shared-static
          persistentVolumeClaim:
            claimName: shared-static-pvc
        - name: html-output
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-output
              mountPath: /usr/share/nginx/html
