p2/confs/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      volumes:
        - name: shared-static
          persistentVolumeClaim:
            claimName: shared-static-pvc
        - name: html-output
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-output
              mountPath: /usr/share/nginx/html
